# ArchaiEngine

./: .editorconfig  CMakeLists.txt  README.md  conan_and_cmake.bat  conanfile.txt  go.mod  go.sum  test.go
gate/: gate.go
gate/conf/: conf.go
gate/gateway/: gateway.go
gate/gateway/gatewaymodels/: basic_auth.go  service.go
gate/server/: conn.go  http.go
gate/websocket/: websocket.go
internal/conf/: conf.go
internal/dao/mysql/: mysql.go
internal/dao/redis/: redis.go
internal/logs/: zap.go
internal/rpc/: rank_service.go
internal/system/: system.go
internal/utils/buffer/: ring.go
internal/utils/common/: common.go
internal/utils/errors/: errors.go
internal/utils/ip/: region.go
internal/utils/middleware/: middleware.go
internal/utils/model/: model.go
internal/utils/retry/: retry.go
internal/utils/timer/: chrono_timewheel.go  timewheel.go
internal/utils/timer/chrono/: scheduler.go  (+2 more)
internal/utils/worker/: worker.go
logs/: game_log.go  zap.go
proto/: reader.go
proto/gamepb/: game.pb.go  game.proto
proto/systempb/: system.pb.go  system.proto
src/: bit_stream.cpp  bit_stream.h  bit_utils.cpp  bit_utils.h  connection_component.h  echo_service.h  entity.cpp  entity.h  game_server.cpp  globals.h  icomponent.h  math_utils.cpp  math_utils.h  monster.cpp  monster.h  movement_component.cpp  movement_component.h  navigation_component.cpp  navigation_component.h  player.cpp  player.h  property.h  service.h  space.cpp  space.h  space_component.h  space_service.cpp  space_service.h  sync_array.h  wheel_timer.cpp  wheel_timer.h
src/aoi/: aoi.h  aoi_factory.cpp  aoi_factory.h  grid_aoi.cpp  grid_aoi.h
src/combat/: attr_set.cpp  attr_set.h  combat_component.cpp  combat_component.h
src/combat/skill/: iskill.h  skill_1.cpp  skill_1.h  skill_factory.h
src/fpm/: fix_math.h
src/network/: tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
src/proto/: space_service.pb.cc  space_service.pb.h
src/util/: bytes.h  fifo.h  fifo_test.cpp  fix.h  queue_timer.h  rand.h  sstring.h
